feat: add findByPaymentKey